<resources>

    <string name="app_name">Flits</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_new">New</string>

    <string name="menu_speedCamera">Speed Cameras</string>
    <string name="menu_avgSpeedCheck">Average Speed Checks</string>
    <string name="menu_policeCheck">Police Checks</string>
    <string name="menu_logout">Logout</string>
    <string name="account">Account</string>

    <string name="speedCameraKind_fixed">Fixed speed camera</string>
    <string name="speedCameraKind_car">Onboard Police Vehicle Camera</string>
    <string name="speedCameraKind_lidar">Lidar (super speed camera)</string>
    <string name="speedCameraKind_tripod">Tripod speed camera</string>

    <string name="welcome">Welcome</string>
    <string name="welcomeback">Welcome back</string>
    <string name="logout">Successfully logged out</string>
    <string name="prompt_fullName">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="email_taken">Email already taken</string>
    <string name="invalid_password">Password not strong enough</string>
    <string name="incorrect_email">Incorrect email address</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="required">Required</string>

    <string name="detail_location">Location</string>
    <string name="detail_beginlocation">Beginlocation</string>
    <string name="detail_endlocation">Endlocation</string>
    <string name="detail_image">Image</string>
    <string name="detail_description">Description</string>
    <string name="detail_kind">Kind</string>
    <string name="detail_image_contentdescription">Image of the speed camera or police check</string>
    <string name="hint_location">Location</string>
    <string name="hint_beginlocation">Beginlocation</string>
    <string name="hint_endlocation">Endlocation</string>
    <string name="hint_description">Description (optional)</string>
    <string name="no_items">No items</string>
    <string name="on_save">Saved successfully</string>

    <string name="title_add_speedcamera">New Speed Camera</string>
    <string name="title_add_avgspeedcheck">New Average Speed Check</string>
    <string name="title_add_policecheck">New Police Check</string>

    <string name="deleting">Deleting…</string>

</resources>
