<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_speedCamera"
                android:icon="@drawable/ic_menu_speedcamera"
                android:title="@string/menu_speedCamera"/>
        <item
                android:id="@+id/nav_avgSpeedCheck"
                android:icon="@drawable/ic_menu_avgspeedcheck"
                android:title="@string/menu_avgSpeedCheck"/>
        <item
                android:id="@+id/nav_policeCheck"
                android:icon="@drawable/ic_menu_policecheck"
                android:title="@string/menu_policeCheck"/>
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/menu_logout"/>
        </menu>
    </item>
</menu>
