<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="viewmodel"
                type="be.jakoblierman.flits.viewmodels.PoliceCheckViewModel"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:ignore="ScrollViewSize">

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_location" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:id="@+id/inputlayout_location">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/input_location"
                        android:inputType="textShortMessage" android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/inputlayout_location"
                    android:id="@+id/inputlayout_description" android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/input_description"
                        android:inputType="textLongMessage"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:text="@string/action_cancel"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_cancel"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button_save"
                    android:layout_marginEnd="8dp"
                    android:textSize="@dimen/font_size_normal"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/inputlayout_description"
                    app:layout_constraintVertical_bias="1.0"/>

            <Button
                    android:text="@string/action_save"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_save"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="@dimen/font_size_normal"
                    app:icon="@drawable/ic_save"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/inputlayout_description"
                    app:layout_constraintVertical_bias="1.0"
                    android:enabled="false"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>