<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        tools:context=".ui.WelcomeFragment">
    <ImageView
            app:srcCompat="@drawable/ic_launcher_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop" android:id="@+id/image_background" tools:ignore="ContentDescription"/>
    <Button
            android:text="@string/action_sign_in"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/button_sign_in"
            app:cornerRadius="200dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/text_title" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/action_register"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/button_register"
            app:cornerRadius="200dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_background" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_in" app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/image_logo" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="80dp" app:srcCompat="@drawable/ic_launcher_foreground"
            android:layout_marginTop="80dp" app:layout_constraintTop_toTopOf="@+id/image_background"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/text_title"
            tools:ignore="ContentDescription" android:scaleType="centerCrop"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="224dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/white" android:textStyle="bold" android:id="@+id/text_title"
    />
</androidx.constraintlayout.widget.ConstraintLayout>