<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="viewmodel"
                type="be.jakoblierman.flits.viewmodels.SpeedCameraViewModel"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" tools:ignore="ScrollViewSize">

            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:visibility="@{safeUnbox(viewmodel.getLoadingVisibility())}"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/content"
                    android:visibility="@{safeUnbox(viewmodel.getObjectVisibility())}">

                <TextView
                        android:text="@string/detail_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_location_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                        android:text="@{viewmodel.speedCamera.location}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_location_value"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/text_location_title"/>
                <TextView
                        android:text="@string/detail_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_description_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/text_location_value"
                        android:visibility="gone"/>
                <TextView
                        android:text="@{viewmodel.speedCamera.description}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_description_value"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_description_title"
                        android:visibility="gone"/>
                <TextView
                        android:text="@string/detail_kind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_kind_title" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_description_value"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
                <TextView
                        android:text="@{viewmodel.speedCamera.kind}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_kind_value" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_kind_title"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="16dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_kind_value" android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:contentDescription="@string/detail_image_contentdescription"
                        android:visibility="gone"
                />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/fab_margin"
                        app:srcCompat="@drawable/ic_delete"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:backgroundTint="@android:color/holo_red_dark"
                        android:visibility="gone"/>
                <TextView
                        android:text="@{viewmodel.speedCamera.timeCreated.toString()}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/text_timestamp_value"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="italic"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/fab_delete"
                        app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/text_kind_value"
                        app:layout_constraintVertical_bias="1.0"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>